<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"

android:layout_width="match_parent"
android:layout_height="match_parent"
android:autofillHints="@string/typer_your_nickName"
android:orientation="vertical">

<TextView
    android:id="@+id/name_text"
    style="@style/name_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/name_text"
    android:textAlignment="center" />

<EditText
    android:id="@+id/name_edit"
    style="@style/name_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/typer_your_nickName"
    android:inputType="textPersonName" />

<Button
    android:id="@+id/button"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/layout_margin"
    android:fontFamily="@font/roboto"
    android:text="@string/done" />

<TextView
    android:id="@+id/nickname_Text"
    style="@style/name_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone" />

<ImageView
    android:id="@+id/star_image"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/layout_margin"
    android:contentDescription="@string/yellow_star"
    app:srcCompat="@android:drawable/btn_star_big_on" />

<ScrollView
    android:id="@+id/bio_scroll"
    style="@style/name_style"
    android:layout_width="match_parent"
    android:layout_height="1157dp">


    <TextView
        android:id="@+id/bio_text"
        style="@style/name_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/small_padding"
        android:paddingEnd="@dimen/small_padding"
        android:text="@string/description"
        tools:text="@string/description" />
</ScrollView>
</LinearLayout>
